<resources>
    <string name="app_name">D\'Orphan</string>
    <string name="app_slogan">Asah Bakat dan Minatmu</string>
    <string name="Email">Email</string>
    <string name="til_email">Masukkan alamat email</string>
    <string name="til_password">Masukkan kata sandi</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="btn_login_txt">Masuk</string>
    <string name="copyright">Archotech</string>
    <string name="title_history">Histori Bermain</string>
    <string name="waktu">Waktu</string>
    <string name="Waktu">Waktu</string>
    <string name="Level">Level</string>
    <string name="Benar">Benar</string>
    <string name="Peringkat">Peringkat</string>
    <string name="nothing">-</string>
    <string name="none">0</string>
    <string name="KetLoading">Sedang menggugah...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>